# codecollab

./: .env.example  .gitignore  AUTH_SYSTEM_COMPLETE.md  DATABASE_SETUP.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  shutdown.sh  startup.sh  test-languages.sh
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docker-publish.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md
scripts/: setup.sh  start.sh  stop.sh  test_auth.sh
services/ai-service/: Dockerfile  requirements.txt
services/ai-service/app/: main.py
services/api-gateway/: Dockerfile  requirements.txt
services/api-gateway/app/: init_db.py  main.py
services/api-gateway/app/core/: config.py  database.py  init_db.py  mongodb.py  security.py  templates.py
services/api-gateway/app/schemas/: auth.py  session.py
services/api-gateway/app/services/: git_service.py
services/auth-service/: Dockerfile  requirements.txt
services/auth-service/app/: main.py
services/collab-service/: Dockerfile  go.mod  go.sum
services/collab-service/cmd/server/: main.go
services/compiler-service/: Dockerfile  main.v
services/execution-service/: Cargo.toml  Dockerfile
services/execution-service/src/: main.rs
services/frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
services/frontend/src/: App.css  App.tsx  index.css  vite-env.d.ts
services/frontend/src/api/: client.ts
services/memory-service/: Dockerfile
services/memory-service/src/: main.zig
services/session-manager/: Dockerfile  mix.exs
shared/python/database/: connection.py
(+29 files in other folders)
