[package]
name = "execution-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-rt = "2.10"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
env_logger = "0.11"
log = "0.4"
uuid = { version = "1.11", features = ["v4"] }
